added modal to grid

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
+    <link rel="stylesheet" href="CSS/style.css">
     <title>Project 1</title>
 </head>
 
@@ -34,10 +35,11 @@
         </div>
         <div class="row">
             <div id="musicone" class="col s12 m6 l3">
-                <button data-target="modal1" class="btn modal-trigger">100</button>
+                <button data-target="modal1" class="btn-large modal-trigger">100</button>
+
                 <div id="modal1" class="modal">
                     <div class="modal-content">
-                        <h4>100</h4>
+                        <h4>Music 100</h4>
                         <p>A bunch of text</p>
                     </div>
                     <div class="modal-footer">
@@ -47,138 +49,323 @@
 
             </div>
             <div id="lifeone" class="col s12 m6 l3">
-                <p>
-                    <a class="waves-effect waves-light btn-large">100</a>
-                </p>
+                <button data-target="modal1" class="btn-large modal-trigger">100</button>
+
+                <div id="modal1" class="modal">
+                    <div class="modal-content">
+                        <h4>Life 100</h4>
+                        <p>A bunch of text</p>
+                    </div>
+                    <div class="modal-footer">
+                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+                    </div>
+                </div>
             </div>
             <div id="mathone" class="col s12 m6 l3">
-                <p>
-                    <a class="waves-effect waves-light btn-large">100</a>
-                </p>
+                <button data-target="modal1" class="btn-large modal-trigger">100</button>
+
+                <div id="modal1" class="modal">
+                    <div class="modal-content">
+                        <h4>Life 100</h4>
+                        <p>A bunch of text</p>
+                    </div>
+                    <div class="modal-footer">
+                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+                    </div>
+                </div>
             </div>
             <div id="societyone" class="col s12 m6 l3">
-                <p>
-                    <a class="waves-effect waves-light btn-large">100</a>
-                </p>
+                <button data-target="modal1" class="btn-large modal-trigger">100</button>
+
+                <div id="modal1" class="modal">
+                    <div class="modal-content">
+                        <h4>Life 100</h4>
+                        <p>A bunch of text</p>
+                    </div>
+                    <div class="modal-footer">
+                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="row">
             <div id="musictwo" class="col s12 m6 l3">
-                <p>
-                    <a class="waves-effect waves-light btn-large">200</a>
-                </p>
+                <button data-target="modal1" class="btn-large modal-trigger">100</button>
+
+                <div id="modal1" class="modal">
+                    <div class="modal-content">
+                        <h4>Life 100</h4>
+                        <p>A bunch of text</p>
+                    </div>
+                    <div class="modal-footer">
+                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+                    </div>
+                </div>
 
             </div>
             <div id="lifetwo" class="col s12 m6 l3">
-                <p>
-                    <a class="waves-effect waves-light btn-large">200</a>
-                </p>
+                <button data-target="modal1" class="btn-large modal-trigger">100</button>
+
+                <div id="modal1" class="modal">
+                    <div class="modal-content">
+                        <h4>Life 100</h4>
+                        <p>A bunch of text</p>
+                    </div>
+                    <div class="modal-footer">
+                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+                    </div>
+                </div>
             </div>
             <div id="mathtwo" class="col s12 m6 l3">
-                <p>
-                    <a class="waves-effect waves-light btn-large">200</a>
-                </p>
+                <button data-target="modal1" class="btn-large modal-trigger">100</button>
+
+                <div id="modal1" class="modal">
+                    <div class="modal-content">
+                        <h4>Life 100</h4>
+                        <p>A bunch of text</p>
+                    </div>
+                    <div class="modal-footer">
+                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+                    </div>
+                </div>
             </div>
             <div id="societytwo" class="col s12 m6 l3">
-                <p>
-                    <a class="waves-effect waves-light btn-large">200</a>
-                </p>
+                <button data-target="modal1" class="btn-large modal-trigger">100</button>
+
+                <div id="modal1" class="modal">
+                    <div class="modal-content">
+                        <h4>Life 100</h4>
+                        <p>A bunch of text</p>
+                    </div>
+                    <div class="modal-footer">
+                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+                    </div>
+                </div>
             </div>
         </div>
 
         <div class="row">
             <div id="musicthree" class="col s12 m6 l3">
-                <p>
-                    <a class="waves-effect waves-light btn-large">300</a>
-                </p>
+                <button data-target="modal1" class="btn-large modal-trigger">100</button>
+
+                <div id="modal1" class="modal">
+                    <div class="modal-content">
+                        <h4>Life 100</h4>
+                        <p>A bunch of text</p>
+                    </div>
+                    <div class="modal-footer">
+                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+                    </div>
+                </div>
             </div>
             <div id="lifethree" class="col s12 m6 l3">
-                <p>
-                    <a class="waves-effect waves-light btn-large">300</a>
-                </p>
+                <button data-target="modal1" class="btn-large modal-trigger">100</button>
+
+                <div id="modal1" class="modal">
+                    <div class="modal-content">
+                        <h4>Life 100</h4>
+                        <p>A bunch of text</p>
+                    </div>
+                    <div class="modal-footer">
+                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+                    </div>
+                </div>
             </div>
             <div id="maththree" class="col s12 m6 l3">
-                <p>
-                    <a class="waves-effect waves-light btn-large">300</a>
-                </p>
+                <button data-target="modal1" class="btn-large modal-trigger">100</button>
+
+                <div id="modal1" class="modal">
+                    <div class="modal-content">
+                        <h4>Life 100</h4>
+                        <p>A bunch of text</p>
+                    </div>
+                    <div class="modal-footer">
+                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+                    </div>
+                </div>
             </div>
             <div id="societythree" class="col s12 m6 l3">
-                <p>
-                    <a class="waves-effect waves-light btn-large">300</a>
-                </p>
+                <button data-target="modal1" class="btn-large modal-trigger">100</button>
+
+                <div id="modal1" class="modal">
+                    <div class="modal-content">
+                        <h4>Life 100</h4>
+                        <p>A bunch of text</p>
+                    </div>
+                    <div class="modal-footer">
+                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="row">
             <div id="musicfour" class="col s12 m6 l3">
-                <p>
-                    <a class="waves-effect waves-light btn-large">400</a>
-                </p>
+                <button data-target="modal1" class="btn-large modal-trigger">100</button>
+
+                <div id="modal1" class="modal">
+                    <div class="modal-content">
+                        <h4>Life 100</h4>
+                        <p>A bunch of text</p>
+                    </div>
+                    <div class="modal-footer">
+                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+                    </div>
+                </div>
             </div>
             <div id="lifefour" class="col s12 m6 l3">
-                <p>
-                    <a class="waves-effect waves-light btn-large">400</a>
-                </p>
+                <button data-target="modal1" class="btn-large modal-trigger">100</button>
+
+                <div id="modal1" class="modal">
+                    <div class="modal-content">
+                        <h4>Life 100</h4>
+                        <p>A bunch of text</p>
+                    </div>
+                    <div class="modal-footer">
+                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+                    </div>
+                </div>
             </div>
             <div id="mathfour" class="col s12 m6 l3">
-                <p>
-                    <a class="waves-effect waves-light btn-large">400</a>
-                </p>
+                <button data-target="modal1" class="btn-large modal-trigger">100</button>
+
+                <div id="modal1" class="modal">
+                    <div class="modal-content">
+                        <h4>Life 100</h4>
+                        <p>A bunch of text</p>
+                    </div>
+                    <div class="modal-footer">
+                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+                    </div>
+                </div>
             </div>
             <div id="societyfour" class="col s12 m6 l3">
-                <p>
-                    <a class="waves-effect waves-light btn-large">400</a>
-                </p>
+                <button data-target="modal1" class="btn-large modal-trigger">100</button>
+
+                <div id="modal1" class="modal">
+                    <div class="modal-content">
+                        <h4>Life 100</h4>
+                        <p>A bunch of text</p>
+                    </div>
+                    <div class="modal-footer">
+                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="row">
             <div id="musicfive" class="col s12 m6 l3">
-                <p>
-                    <a class="waves-effect waves-light btn-large">400</a>
-                </p>
+                <button data-target="modal1" class="btn-large modal-trigger">100</button>
+
+                <div id="modal1" class="modal">
+                    <div class="modal-content">
+                        <h4>Life 100</h4>
+                        <p>A bunch of text</p>
+                    </div>
+                    <div class="modal-footer">
+                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+                    </div>
+                </div>
             </div>
             <div id="lifefive" class="col s12 m6 l3">
-                <p>
-                    <a class="waves-effect waves-light btn-large">400</a>
-                </p>
+                <button data-target="modal1" class="btn-large modal-trigger">100</button>
+
+                <div id="modal1" class="modal">
+                    <div class="modal-content">
+                        <h4>Life 100</h4>
+                        <p>A bunch of text</p>
+                    </div>
+                    <div class="modal-footer">
+                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+                    </div>
+                </div>
             </div>
             <div id="mathfive" class="col s12 m6 l3">
-                <p>
-                    <a class="waves-effect waves-light btn-large">400</a>
-                </p>
+                <button data-target="modal1" class="btn-large modal-trigger">100</button>
+
+                <div id="modal1" class="modal">
+                    <div class="modal-content">
+                        <h4>Life 100</h4>
+                        <p>A bunch of text</p>
+                    </div>
+                    <div class="modal-footer">
+                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+                    </div>
+                </div>
             </div>
             <div id="societyfive" class="col s12 m6 l3">
-                <p>
-                    <a class="waves-effect waves-light btn-large">400</a>
-                </p>
+                <button data-target="modal1" class="btn-large modal-trigger">100</button>
+
+                <div id="modal1" class="modal">
+                    <div class="modal-content">
+                        <h4>Life 100</h4>
+                        <p>A bunch of text</p>
+                    </div>
+                    <div class="modal-footer">
+                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="row">
             <div id="musicsix" class="col s12 m6 l3">
-                <p>
-                    <a class="waves-effect waves-light btn-large">500</a>
-                </p>
+                <button data-target="modal1" class="btn-large modal-trigger">100</button>
+
+                <div id="modal1" class="modal">
+                    <div class="modal-content">
+                        <h4>Life 100</h4>
+                        <p>A bunch of text</p>
+                    </div>
+                    <div class="modal-footer">
+                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+                    </div>
+                </div>
             </div>
             <div id="lifesix" class="col s12 m6 l3">
-                <p>
-                    <a class="waves-effect waves-light btn-large">500</a>
-                </p>
+                <button data-target="modal1" class="btn-large modal-trigger">100</button>
+
+                <div id="modal1" class="modal">
+                    <div class="modal-content">
+                        <h4>Life 100</h4>
+                        <p>A bunch of text</p>
+                    </div>
+                    <div class="modal-footer">
+                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+                    </div>
+                </div>
             </div>
             <div id="mathsix" class="col s12 m6 l3">
-                <p>
-                    <a class="waves-effect waves-light btn-large">500</a>
-                </p>
+                <button data-target="modal1" class="btn-large modal-trigger">100</button>
+
+                <div id="modal1" class="modal">
+                    <div class="modal-content">
+                        <h4>Life 100</h4>
+                        <p>A bunch of text</p>
+                    </div>
+                    <div class="modal-footer">
+                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+                    </div>
+                </div>
             </div>
             <div id="societysix" class="col s12 m6 l3">
-                <p>
-                    <a class="waves-effect waves-light btn-large">500</a>
-                </p>
+                <button data-target="modal1" class="btn-large modal-trigger">100</button>
+
+                <div id="modal1" class="modal">
+                    <div class="modal-content">
+                        <h4>Life 100</h4>
+                        <p>A bunch of text</p>
+                    </div>
+                    <div class="modal-footer">
+                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 
-
+    <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
-    <script src="main.js"></script>
+    <script src="JS/main.js"></script>
 </body>
 
 </html>
