--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
                 <div id="modal1" class="modal">
                     <div class="modal-content">
-                        <h4>Life 100</h4>
+                        <h4>Math 100</h4>
                         <p>A bunch of text</p>
                     </div>
                     <div class="modal-footer">
@@ -79,7 +79,7 @@
 
                 <div id="modal1" class="modal">
                     <div class="modal-content">
-                        <h4>Life 100</h4>
+                        <h4>Society 100</h4>
                         <p>A bunch of text</p>
                     </div>
                     <div class="modal-footer">
@@ -94,7 +94,7 @@
 
                 <div id="modal1" class="modal">
                     <div class="modal-content">
-                        <h4>Life 100</h4>
+                        <h4>Music 200</h4>
                         <p>A bunch of text</p>
                     </div>
                     <div class="modal-footer">
@@ -108,7 +108,7 @@
 
                 <div id="modal1" class="modal">
                     <div class="modal-content">
-                        <h4>Life 100</h4>
+                        <h4>Life 200</h4>
                         <p>A bunch of text</p>
                     </div>
                     <div class="modal-footer">
@@ -121,7 +121,7 @@
 
                 <div id="modal1" class="modal">
                     <div class="modal-content">
-                        <h4>Life 100</h4>
+                        <h4>Math 200</h4>
                         <p>A bunch of text</p>
                     </div>
                     <div class="modal-footer">
@@ -134,7 +134,7 @@
 
                 <div id="modal1" class="modal">
                     <div class="modal-content">
-                        <h4>Life 100</h4>
+                        <h4>Society 200</h4>
                         <p>A bunch of text</p>
                     </div>
                     <div class="modal-footer">
@@ -150,7 +150,7 @@
 
                 <div id="modal1" class="modal">
                     <div class="modal-content">
-                        <h4>Life 100</h4>
+                        <h4>Music 300</h4>
                         <p>A bunch of text</p>
                     </div>
                     <div class="modal-footer">
@@ -163,7 +163,7 @@
 
                 <div id="modal1" class="modal">
                     <div class="modal-content">
-                        <h4>Life 100</h4>
+                        <h4>Life 300</h4>
                         <p>A bunch of text</p>
                     </div>
                     <div class="modal-footer">
@@ -176,7 +176,7 @@
 
                 <div id="modal1" class="modal">
                     <div class="modal-content">
-                        <h4>Life 100</h4>
+                        <h4>Math 300</h4>
                         <p>A bunch of text</p>
                     </div>
                     <div class="modal-footer">
@@ -189,7 +189,7 @@
 
                 <div id="modal1" class="modal">
                     <div class="modal-content">
-                        <h4>Life 100</h4>
+                        <h4>Society 300</h4>
                         <p>A bunch of text</p>
                     </div>
                     <div class="modal-footer">
@@ -204,7 +204,7 @@
 
                 <div id="modal1" class="modal">
                     <div class="modal-content">
-                        <h4>Life 100</h4>
+                        <h4>Music 400</h4>
                         <p>A bunch of text</p>
                     </div>
                     <div class="modal-footer">
@@ -217,7 +217,7 @@
 
                 <div id="modal1" class="modal">
                     <div class="modal-content">
-                        <h4>Life 100</h4>
+                        <h4>Life 400</h4>
                         <p>A bunch of text</p>
                     </div>
                     <div class="modal-footer">
@@ -230,7 +230,7 @@
 
                 <div id="modal1" class="modal">
                     <div class="modal-content">
-                        <h4>Life 100</h4>
+                        <h4>Math 400</h4>
                         <p>A bunch of text</p>
                     </div>
                     <div class="modal-footer">
@@ -243,7 +243,7 @@
 
                 <div id="modal1" class="modal">
                     <div class="modal-content">
-                        <h4>Life 100</h4>
+                        <h4>Society 400</h4>
                         <p>A bunch of text</p>
                     </div>
                     <div class="modal-footer">
@@ -258,7 +258,7 @@
 
                 <div id="modal1" class="modal">
                     <div class="modal-content">
-                        <h4>Life 100</h4>
+                        <h4>Music 500</h4>
                         <p>A bunch of text</p>
                     </div>
                     <div class="modal-footer">
@@ -271,7 +271,7 @@
 
                 <div id="modal1" class="modal">
                     <div class="modal-content">
-                        <h4>Life 100</h4>
+                        <h4>Life 500</h4>
                         <p>A bunch of text</p>
                     </div>
                     <div class="modal-footer">
@@ -284,7 +284,7 @@
 
                 <div id="modal1" class="modal">
                     <div class="modal-content">
-                        <h4>Life 100</h4>
+                        <h4>Math 500</h4>
                         <p>A bunch of text</p>
                     </div>
                     <div class="modal-footer">
@@ -297,7 +297,7 @@
 
                 <div id="modal1" class="modal">
                     <div class="modal-content">
-                        <h4>Life 100</h4>
+                        <h4>Society 500</h4>
                         <p>A bunch of text</p>
                     </div>
                     <div class="modal-footer">
