--- a/index.html
+++ b/index.html
@@ -40,7 +40,28 @@
                 <div id="modal1" class="modal">
                     <div class="modal-content">
                         <h4>Music 100</h4>
-                        <p>A bunch of text</p>
+                        <p>
+                            <form action="#">
+                                <p>
+                                    <label>
+                                      <input class="with-gap" name="group1" type="radio"  />
+                                      <span>Green</span>
+                                    </label>
+                                  </p>
+                                  <p>
+                                    <label>
+                                      <input class="with-gap" name="group1" type="radio"  />
+                                      <span>Green</span>
+                                    </label>
+                                  </p>
+                                  <p>
+                                    <label>
+                                      <input class="with-gap" name="group1" type="radio"  />
+                                      <span>Green</span>
+                                    </label>
+                                  </p>
+                            </form>
+                        </p>
                     </div>
                     <div class="modal-footer">
                         <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
