--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <button data-target="modal1" class="btn-large modal-trigger">100</button>
 
                 <div id="modal1" class="modal">
-                    <div class="modal-content">
+                    <div id="music-100" class="modal-content">
                         <h4>Music 100</h4>
                         <p>
                             <form action="#">
@@ -70,16 +70,16 @@
 
             </div>
             <div id="lifeone" class="col s12 m6 l3">
-                <button data-target="modal1" class="btn-large modal-trigger">100</button>
+                <button data-target="modal2" class="btn-large modal-trigger">100</button>
 
-                <div id="modal1" class="modal">
+                <div id="modal2" class="modal">
                     <div class="modal-content">
                         <h4>Life 100</h4>
                         <p>
                             <form action="#">
                                 <p>
                                     <label>
-                                        <input class="with-gap" name="group1" type="radio" />
+                                        <input class="with-gap" name="group1" type="radio" /> s
                                         <span>Green</span>
                                     </label>
                                 </p>
@@ -104,9 +104,9 @@
                 </div>
             </div>
             <div id="mathone" class="col s12 m6 l3">
-                <button data-target="modal1" class="btn-large modal-trigger">100</button>
+                <button data-target="modal3" class="btn-large modal-trigger">100</button>
 
-                <div id="modal1" class="modal">
+                <div id="modal3" class="modal">
                     <div class="modal-content">
                         <h4>Math 100</h4>
                         <p>
@@ -138,9 +138,9 @@
                 </div>
             </div>
             <div id="societyone" class="col s12 m6 l3">
-                <button data-target="modal1" class="btn-large modal-trigger">100</button>
+                <button data-target="modal4" class="btn-large modal-trigger">100</button>
 
-                <div id="modal1" class="modal">
+                <div id="modal4" class="modal">
                     <div class="modal-content">
                         <h4>Society 100</h4>
                         <p>
@@ -174,9 +174,9 @@
         </div>
         <div class="row">
             <div id="musictwo" class="col s12 m6 l3">
-                <button data-target="modal1" class="btn-large modal-trigger">200</button>
+                <button data-target="modal5" class="btn-large modal-trigger">200</button>
 
-                <div id="modal1" class="modal">
+                <div id="modal5" class="modal">
                     <div class="modal-content">
                         <h4>Music 200</h4>
                         <p>
@@ -209,9 +209,9 @@
 
             </div>
             <div id="lifetwo" class="col s12 m6 l3">
-                <button data-target="modal1" class="btn-large modal-trigger">200</button>
+                <button data-target="modal6" class="btn-large modal-trigger">200</button>
 
-                <div id="modal1" class="modal">
+                <div id="modal6" class="modal">
                     <div class="modal-content">
                         <h4>Life 200</h4>
                         <p>
@@ -243,9 +243,9 @@
                 </div>
             </div>
             <div id="mathtwo" class="col s12 m6 l3">
-                <button data-target="modal1" class="btn-large modal-trigger">200</button>
+                <button data-target="modal7" class="btn-large modal-trigger">200</button>
 
-                <div id="modal1" class="modal">
+                <div id="modal7" class="modal">
                     <div class="modal-content">
                         <h4>Math 200</h4>
                         <p>
@@ -277,9 +277,9 @@
                 </div>
             </div>
             <div id="societytwo" class="col s12 m6 l3">
-                <button data-target="modal1" class="btn-large modal-trigger">200</button>
+                <button data-target="modal8" class="btn-large modal-trigger">200</button>
 
-                <div id="modal1" class="modal">
+                <div id="modal8" class="modal">
                     <div class="modal-content">
                         <h4>Society 200</h4>
                         <p>
@@ -314,9 +314,9 @@
 
         <div class="row">
             <div id="musicthree" class="col s12 m6 l3">
-                <button data-target="modal1" class="btn-large modal-trigger">300</button>
+                <button data-target="modal9" class="btn-large modal-trigger">300</button>
 
-                <div id="modal1" class="modal">
+                <div id="modal9" class="modal">
                     <div class="modal-content">
                         <h4>Music 300</h4>
                         <p>
@@ -348,9 +348,9 @@
                 </div>
             </div>
             <div id="lifethree" class="col s12 m6 l3">
-                <button data-target="modal1" class="btn-large modal-trigger">300</button>
+                <button data-target="modal10" class="btn-large modal-trigger">300</button>
 
-                <div id="modal1" class="modal">
+                <div id="modal10" class="modal">
                     <div class="modal-content">
                         <h4>Life 300</h4>
                         <p>
@@ -382,9 +382,9 @@
                 </div>
             </div>
             <div id="maththree" class="col s12 m6 l3">
-                <button data-target="modal1" class="btn-large modal-trigger">300</button>
+                <button data-target="modal11" class="btn-large modal-trigger">300</button>
 
-                <div id="modal1" class="modal">
+                <div id="modal11" class="modal">
                     <div class="modal-content">
                         <h4>Math 300</h4>
                         <p>
@@ -416,9 +416,9 @@
                 </div>
             </div>
             <div id="societythree" class="col s12 m6 l3">
-                <button data-target="modal1" class="btn-large modal-trigger">300</button>
+                <button data-target="modal12" class="btn-large modal-trigger">300</button>
 
-                <div id="modal1" class="modal">
+                <div id="modal12" class="modal">
                     <div class="modal-content">
                         <h4>Society 300</h4>
                         <p>
@@ -452,9 +452,9 @@
         </div>
         <div class="row">
             <div id="musicfour" class="col s12 m6 l3">
-                <button data-target="modal1" class="btn-large modal-trigger">400</button>
+                <button data-target="modal13" class="btn-large modal-trigger">400</button>
 
-                <div id="modal1" class="modal">
+                <div id="modal13" class="modal">
                     <div class="modal-content">
                         <h4>Music 400</h4>
                         <p>
@@ -486,9 +486,9 @@
                 </div>
             </div>
             <div id="lifefour" class="col s12 m6 l3">
-                <button data-target="modal1" class="btn-large modal-trigger">400</button>
+                <button data-target="modal14" class="btn-large modal-trigger">400</button>
 
-                <div id="modal1" class="modal">
+                <div id="modal14" class="modal">
                     <div class="modal-content">
                         <h4>Life 400</h4>
                         <p>
@@ -520,9 +520,9 @@
                 </div>
             </div>
             <div id="mathfour" class="col s12 m6 l3">
-                <button data-target="modal1" class="btn-large modal-trigger">400</button>
+                <button data-target="modal15" class="btn-large modal-trigger">400</button>
 
-                <div id="modal1" class="modal">
+                <div id="modal15" class="modal">
                     <div class="modal-content">
                         <h4>Math 400</h4>
                         <p>
@@ -554,9 +554,9 @@
                 </div>
             </div>
             <div id="societyfour" class="col s12 m6 l3">
-                <button data-target="modal1" class="btn-large modal-trigger">400</button>
+                <button data-target="modal16" class="btn-large modal-trigger">400</button>
 
-                <div id="modal1" class="modal">
+                <div id="modal16" class="modal">
                     <div class="modal-content">
                         <h4>Society 400</h4>
                         <p>
@@ -590,9 +590,9 @@
         </div>
         <div class="row">
             <div id="musicfive" class="col s12 m6 l3">
-                <button data-target="modal1" class="btn-large modal-trigger">500</button>
+                <button data-target="modal17" class="btn-large modal-trigger">500</button>
 
-                <div id="modal1" class="modal">
+                <div id="modal17" class="modal">
                     <div class="modal-content">
                         <h4>Music 500</h4>
                         <p>
@@ -624,9 +624,9 @@
                 </div>
             </div>
             <div id="lifefive" class="col s12 m6 l3">
-                <button data-target="modal1" class="btn-large modal-trigger">500</button>
+                <button data-target="modal18" class="btn-large modal-trigger">500</button>
 
-                <div id="modal1" class="modal">
+                <div id="modal18" class="modal">
                     <div class="modal-content">
                         <h4>Life 500</h4>
                         <p>
@@ -658,9 +658,9 @@
                 </div>
             </div>
             <div id="mathfive" class="col s12 m6 l3">
-                <button data-target="modal1" class="btn-large modal-trigger">500</button>
+                <button data-target="modal19" class="btn-large modal-trigger">500</button>
 
-                <div id="modal1" class="modal">
+                <div id="modal19" class="modal">
                     <div class="modal-content">
                         <h4>Math 500</h4>
                         <p>
@@ -692,9 +692,9 @@
                 </div>
             </div>
             <div id="societyfive" class="col s12 m6 l3">
-                <button data-target="modal1" class="btn-large modal-trigger">500</button>
+                <button data-target="modal20" class="btn-large modal-trigger">500</button>
 
-                <div id="modal1" class="modal">
+                <div id="modal20" class="modal">
                     <div class="modal-content">
                         <h4>Society 500</h4>
                         <p>
