j/s of retaining answer

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
 <body>
 
+    <canvas>
+        <p>0</p>
+    </canvas>
     <div class="container">
         <div class="row">
             <div class="col s12">
@@ -41,23 +44,24 @@
                     <div id="music-100" class="modal-content">
                         <h4>Music 100</h4>
                         <p>
-                            <form action="#">
+                            <form id ="que1" action="#">
+                                <h5>Who is the "King of Pop?"</h5>
                                 <p>
                                     <label>
-                                        <input class="with-gap" name="group1" type="radio" />
-                                        <span>Green</span>
+                                        <input class="with-gap" name="group1" type="radio" value="Prince" />
+                                        <span>Prince</span>
                                     </label>
                                 </p>
                                 <p>
                                     <label>
-                                        <input class="with-gap" name="group1" type="radio" />
-                                        <span>Green</span>
+                                        <input class="with-gap" name="group1" type="radio" value="michaeljackson" />
+                                        <span>Michael Jackson</span>
                                     </label>
                                 </p>
                                 <p>
                                     <label>
-                                        <input class="with-gap" name="group1" type="radio" />
-                                        <span>Green</span>
+                                        <input class="with-gap" name="group1" type="radio" value="elvispresley" />
+                                        <span>Elvis Presley</span>
                                     </label>
                                 </p>
                             </form>
@@ -79,19 +83,19 @@
                             <form action="#">
                                 <p>
                                     <label>
-                                        <input class="with-gap" name="group1" type="radio" /> s
+                                        <input class="with-gap" name="group1" type="radio" value="music100a"/> 
                                         <span>Green</span>
                                     </label>
                                 </p>
                                 <p>
                                     <label>
-                                        <input class="with-gap" name="group1" type="radio" />
+                                        <input class="with-gap" name="group1" type="radio" value="music100b" />
                                         <span>Green</span>
                                     </label>
                                 </p>
                                 <p>
                                     <label>
-                                        <input class="with-gap" name="group1" type="radio" />
+                                        <input class="with-gap" name="group1" type="radio" value="music100c" />
                                         <span>Green</span>
                                     </label>
                                 </p>
