--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
                                 <h5>Who is the "King of Pop?"</h5>
                                 <p>
                                     <label>
-                                        <input class="with-gap" name="group1" type="radio" value="Prince" />
+                                        <input class="with-gap" name="group1" type="radio" value="music100a" />
                                         <span>Prince</span>
                                     </label>
                                 </p>
                                 <p>
                                     <label>
-                                        <input class="with-gap" name="group1" type="radio" value="michaeljackson" />
+                                        <input class="with-gap" name="group1" type="radio" value="music100b" />
                                         <span>Michael Jackson</span>
                                     </label>
                                 </p>
                                 <p>
                                     <label>
-                                        <input class="with-gap" name="group1" type="radio" value="elvispresley" />
+                                        <input class="with-gap" name="group1" type="radio" value="music100c" />
                                         <span>Elvis Presley</span>
                                     </label>
                                 </p>
@@ -90,19 +90,19 @@
                             <form action="#">
                                 <p>
                                     <label>
-                                        <input class="with-gap" name="group1" type="radio" value="music100a" />
+                                        <input class="with-gap" name="group1" type="radio" value="life100a" />
                                         <span>Green</span>
                                     </label>
                                 </p>
                                 <p>
                                     <label>
-                                        <input class="with-gap" name="group1" type="radio" value="music100b" />
+                                        <input class="with-gap" name="group1" type="radio" value="life100b" />
                                         <span>Green</span>
                                     </label>
                                 </p>
                                 <p>
                                     <label>
-                                        <input class="with-gap" name="group1" type="radio" value="music100c" />
+                                        <input class="with-gap" name="group1" type="radio" value="life100c" />
                                         <span>Green</span>
                                     </label>
                                 </p>
@@ -124,19 +124,19 @@
                             <form action="#">
                                 <p>
                                     <label>
-                                        <input class="with-gap" name="group1" type="radio" />
+                                        <input class="with-gap" name="group1" type="radio" value="math100a" />
                                         <span>Green</span>
                                     </label>
                                 </p>
                                 <p>
                                     <label>
-                                        <input class="with-gap" name="group1" type="radio" />
+                                        <input class="with-gap" name="group1" type="radio" value="math100b"/>
                                         <span>Green</span>
                                     </label>
                                 </p>
                                 <p>
                                     <label>
-                                        <input class="with-gap" name="group1" type="radio" />
+                                        <input class="with-gap" name="group1" type="radio" value="math100c"/>
                                         <span>Green</span>
                                     </label>
                                 </p>
