--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         </p>
                     </div>
                     <div class="modal-footer">
-                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                        <a href="./" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                     </div>
                 </div>
 
@@ -110,7 +110,7 @@
                         </p>
                     </div>
                     <div class="modal-footer">
-                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                        <a href="./" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                     </div>
                 </div>
             </div>
@@ -144,7 +144,7 @@
                         </p>
                     </div>
                     <div class="modal-footer">
-                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                        <a href="./" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                     </div>
                 </div>
             </div>
@@ -178,7 +178,7 @@
                         </p>
                     </div>
                     <div class="modal-footer">
-                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                        <a href="./" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                     </div>
                 </div>
             </div>
@@ -249,7 +249,7 @@
                         </p>
                     </div>
                     <div class="modal-footer">
-                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                        <a href="./" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                     </div>
                 </div>
             </div>
@@ -283,7 +283,7 @@
                         </p>
                     </div>
                     <div class="modal-footer">
-                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                        <a href="./" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                     </div>
                 </div>
             </div>
@@ -317,7 +317,7 @@
                         </p>
                     </div>
                     <div class="modal-footer">
-                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                        <a href="./" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                     </div>
                 </div>
             </div>
@@ -354,7 +354,7 @@
                         </p>
                     </div>
                     <div class="modal-footer">
-                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                        <a href="./" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                     </div>
                 </div>
             </div>
@@ -388,7 +388,7 @@
                         </p>
                     </div>
                     <div class="modal-footer">
-                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                        <a href="./" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                     </div>
                 </div>
             </div>
@@ -422,7 +422,7 @@
                         </p>
                     </div>
                     <div class="modal-footer">
-                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                        <a href="./" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                     </div>
                 </div>
             </div>
@@ -456,7 +456,7 @@
                         </p>
                     </div>
                     <div class="modal-footer">
-                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                        <a href="./" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                     </div>
                 </div>
             </div>
@@ -492,7 +492,7 @@
                         </p>
                     </div>
                     <div class="modal-footer">
-                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                        <a href="./" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                     </div>
                 </div>
             </div>
@@ -526,7 +526,7 @@
                         </p>
                     </div>
                     <div class="modal-footer">
-                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                        <a href="./" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                     </div>
                 </div>
             </div>
@@ -560,7 +560,7 @@
                         </p>
                     </div>
                     <div class="modal-footer">
-                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                        <a href="./" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                     </div>
                 </div>
             </div>
@@ -594,7 +594,7 @@
                         </p>
                     </div>
                     <div class="modal-footer">
-                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                        <a href="./" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                     </div>
                 </div>
             </div>
@@ -630,7 +630,7 @@
                         </p>
                     </div>
                     <div class="modal-footer">
-                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                        <a href="./" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                     </div>
                 </div>
             </div>
@@ -664,7 +664,7 @@
                         </p>
                     </div>
                     <div class="modal-footer">
-                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                        <a href="./" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                     </div>
                 </div>
             </div>
@@ -698,7 +698,7 @@
                         </p>
                     </div>
                     <div class="modal-footer">
-                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                        <a href="./" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                     </div>
                 </div>
             </div>
@@ -732,7 +732,7 @@
                         </p>
                     </div>
                     <div class="modal-footer">
-                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                        <a href="./" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                     </div>
                 </div>
             </div>
