--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </p>
             </div>
             <div class="col s12">
-                <p>Jeopardy</p>
+                <h1>Jeopardy</h1>
             </div>
             <div class="col s12">
                 <p>
@@ -31,16 +31,16 @@
         </div>
         <div class="row">
             <div class="col s12 m6 l3">
-                <p>Music</p>
+                <h3>Music</h3>
             </div>
             <div class="col s12 m6 l3">
-                <p>Life</p>
+                <h3>Life</h3>
             </div>
             <div class="col s12 m6 l3">
-                <p>Math</p>
+                <h3>Math</h3>
             </div>
             <div class="col s12 m6 l3">
-                <p>Society</p>
+                <h3>Society</h3>
             </div>
         </div>
         <div class="row">
