--- a/index.html
+++ b/index.html
@@ -52,23 +52,23 @@
                         <h4>Music 100</h4>
                         <p>
                             <form id="que1" action="#">
-                                <h5>Who is the "King of Pop?"</h5>
+                                <h5>He is the "King of Pop."</h5>
                                 <p>
                                     <label>
                                         <input class="with-gap" name="group1" type="radio" value="music100a" />
-                                        <span>Prince</span>
+                                        <span>Who is Prince?</span>
                                     </label>
                                 </p>
                                 <p>
                                     <label>
                                         <input class="with-gap" name="group1" type="radio" value="music100b" />
-                                        <span>Michael Jackson</span>
+                                        <span>Who is Michael Jackson?</span>
                                     </label>
                                 </p>
                                 <p>
                                     <label>
                                         <input class="with-gap" name="group1" type="radio" value="music100c" />
-                                        <span>Elvis Presley</span>
+                                        <span>Who is Elvis Presley?</span>
                                     </label>
                                 </p>
                             </form>
