--- a/index.html
+++ b/index.html
@@ -87,23 +87,24 @@
                     <div class="modal-content">
                         <h4>Life 100</h4>
                         <p>
-                            <form action="#">
+                                <form id="que2" action="#">
+                                        <h5>The life expectancy has increased in the past 200,000 years.</h5>
                                 <p>
                                     <label>
                                         <input class="with-gap" name="group1" type="radio" value="life100a" />
-                                        <span>Green</span>
+                                        <span>Is it by 100 years?</span>
                                     </label>
                                 </p>
                                 <p>
                                     <label>
                                         <input class="with-gap" name="group1" type="radio" value="life100b" />
-                                        <span>Green</span>
+                                        <span>Is it by 20 years?</span>
                                     </label>
                                 </p>
                                 <p>
                                     <label>
                                         <input class="with-gap" name="group1" type="radio" value="life100c" />
-                                        <span>Green</span>
+                                        <span>Is it by 50 years?</span>
                                     </label>
                                 </p>
                             </form>
