finished answer system

--- a/index.html
+++ b/index.html
@@ -742,13 +742,13 @@
                                 </p>
                                 <p>
                                     <label>
-                                        <input class="with-gap" name="group1" type="radio" value="society500a" />
+                                        <input class="with-gap" name="group1" type="radio" value="society500b" />
                                         <span>What is the scientific method and how can it be applied to the study of sociology?</span>
                                     </label>
                                 </p>
                                 <p>
                                     <label>
-                                        <input class="with-gap" name="group1" type="radio" value="society500a" />
+                                        <input class="with-gap" name="group1" type="radio" value="society500c" />
                                         <span>How did the discipline of sociology develop?</span>
                                     </label>
                                 </p>
